fix: add boolean filters
