# src/domain/interfaces/presenters/dtos/update.content.dto.ts
@@ -16,6 +16,9 @@ import Joi from 'joi';
  *         spaceId:
  *           type: integer
  *           description: The ID of the space associated with the content.
+ *         favorite:
+ *           type: boolean
+ *           description: media that is favourited.
  *       required: []
  */
 
@@ -23,6 +26,7 @@ export const updateContentSchema = Joi.object({
     name: Joi.string().min(1).max(255).optional(),
     description: Joi.string().max(1000).optional(),
     spaceId: Joi.number().optional(),
+    favorite: Joi.boolean().optional()
 });
 
 export type UpdateContentDTO = {
@@ -33,4 +37,5 @@ export type UpdateContentDTO = {
     location: string;
     spaceId: string;
     uploadCompletion: number;
+    favorite: boolean;
 }
